# WeWork

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  QUICK_START.md  README.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: CLI.md  INSTALLATION_FRAMEWORK.md  PUBLISHING.md  README.md  SUMMARY.md
docs/01-getting-started/: configuration.md  installation.md  project-structure.md  quickstart.md  templates.md
docs/02-backend/: api-routing.md  architecture.md  authentication.md  database.md  events.md  integrations.md  redis-cache.md  tasks-jobs.md
docs/03-frontend/: architecture.md  hooks-utils.md  routing.md  state-management.md  styling-theme.md  ui-kit.md
docs/04-ui-kit/: advanced-components.md  basic-components.md  form-components.md  introduction.md  theme-customization.md
docs/05-modules/: authentication.md  billing.md  file-management.md  notifications.md  user-management.md
docs/06-examples/: advanced-examples.md  basic-examples.md  integration-examples.md
docs/07-development/: debugging.md  development-guide.md  performance.md  testing.md
docs/08-deployment/: cicd.md  deployment.md  docker.md
docs/09-api-reference/: authentication.md  billing.md  overview.md  user-management.md
examples/: README.md
examples/basic/simple-api/: README.md
frontend/: .env.example  README.md  UI_KIT_REFACTORING.md  index.html  package-lock.json  package.json  vite.config.js
frontend/dev-dist/: sw.js  workbox-b6866b34.js
frontend/public/: manifest.webmanifest  push-sw.js
frontend/src/: App.css  App.jsx  config.js  index.css  main.jsx
frontend/src/components/: AdminBacktests.jsx  AdminConfig.jsx  AdminDashboard.jsx  AdminFileBasedBots.jsx  AdminHealth.jsx  AdminLayout.jsx  AdminNotifications.css  AdminNotifications.jsx  AdminPanel.jsx  AdminPayments.jsx  AdminPlans.jsx  AdminRisk.jsx  AdminStrategyInsights.jsx  AdminSubscriptions.jsx  AdminTrades.jsx  AdminUserCohorts.jsx  AdminUsers.jsx  AuthContext.jsx  AuthModal.jsx  BacktestDetails.css  BacktestDetails.jsx  BacktestHistory.css  BacktestHistory.jsx  BacktestPanel.css  BacktestPanel.jsx  BotDetails.css  BotDetails.jsx  BotManagement.css  BotManagement.jsx  BotsDashboard.css  BotsDashboard.jsx  ConfirmModal.css  ConfirmModal.jsx  CryptoPaymentPage.css  CryptoPaymentPage.jsx  DashboardLayout.jsx  ExchangeManagement.css  ExchangeManagement.jsx  FavoriteStrategies.jsx  HomePage.css  (+33 more)
frontend/src/hooks/: useAppVersion.js  useHistory.js  useInfiniteScroll.js  useResponsive.js
frontend/src/ui/: Badge.css  Badge.jsx  Button.css  Button.jsx  Card.css  Card.jsx  EmptyState.css  EmptyState.jsx  Form.css  Form.jsx  Input.css  Input.jsx  Loading.css  Loading.jsx  Modal.css  Modal.jsx  README.md  Table.css  Table.jsx  index.js  theme.js
frontend/src/utils/: dateUtils.js
scripts/: update_version.py
services/postgres/: docker-compose.yml
services/redis/: docker-compose.yml
src/: init_db.py
src/_scripts/: database_backup_solution.py  db_monitor.py  redis_monitor.py  restart_redis_optimized.sh
src/api/: __init__.py  admin_api.py  app.py  auth_api.py  billing_api.py  notifications_api.py
src/cli/: __init__.py  commands.py  main.py
src/cli/templates/: __init__.py
src/cli/templates/admin_template/: README.md  requirements.txt
src/cli/templates/admin_template/frontend/: index.html  package.json  vite.config.js
src/cli/templates/admin_template/frontend/src/: App.css  App.jsx  config.js
src/cli/templates/admin_template/src/: __init__.py
src/cli/templates/admin_template/src/api/: app.py
src/cli/templates/corporate_template/: README.md
src/cli/templates/corporate_template/frontend/: index.html
src/cli/templates/corporate_template/src/: __init__.py
src/cli/templates/ecommerce_template/: Dockerfile  README.md
src/cli/templates/ecommerce_template/frontend/: index.html
src/cli/templates/ecommerce_template/src/: __init__.py
src/cli/templates/messaging_template/: README.md
src/cli/templates/messaging_template/frontend/: index.html
src/cli/templates/messaging_template/src/: __init__.py  init_db.py
src/cli/templates/project_template/: .env.example  .gitignore  README.md  docker-compose.yml  docker-entrypoint.sh  version.json
src/cli/templates/project_template/frontend/: index.html  package.json
src/cli/templates/project_template/src/: __init__.py
src/config/: __init__.py  loader.py  settings.py
src/core/: __init__.py  concurrency_manager.py  event_dispatcher.py  redis_manager.py
src/db/: __init__.py  base.py  create_tables.py  migrate_add_phone_and_otp.py  migrate_add_user_profile_fields.py  migrate_timestamp_to_bigint.py  models.py  repos.py  seed_subscription_plans.py
src/integrations/: __init__.py  webpush.py  wecan_sms.py
src/utils/: __init__.py  logging.py
(+48 files in other folders)
