[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wework-framework"
version = "1.0.4"
description = "A modular full-stack framework for building modern web applications"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "WeWork Team", email = "info@wework.dev"}
]
keywords = ["framework", "fastapi", "react", "fullstack", "web", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "aiohttp>=3.8",
    "sqlalchemy[asyncio]>=1.4",
    "asyncpg>=0.27",
    "alembic>=1.10",
    "pydantic>=1.10",
    "ccxt>=2.0",
    "python-dotenv",
    "pytest",
    "httpx",
    "fastapi",
    "uvicorn[standard]",
    "pywebpush>=1.9.0",
    "bcrypt>=3.2.0,<4",
    "redis>=4.5",
    "numpy",
    "aiogram==3.0.0b7",
    "tradingview_websocket",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "pydantic[email]",
    "python-multipart",
    "qrcode[pil]>=7.4.2",
    "click>=8.0.0",
]

[project.scripts]
wework = "src.cli.main:cli"

[project.urls]
Documentation = "https://github.com/wecanco/WeWork/docs"
Source = "https://github.com/wecanco/WeWork"
Tracker = "https://github.com/wecanco/WeWork/issues"

[tool.setuptools]
# Use find_packages to automatically discover all packages
packages = { find = { exclude = [
    "tests*",
    "examples*",
    "frontend*",
    "venv*",
    "env*",
    "ENV*",
    ".venv*",
    "node_modules*",
    "dist*",
    "build*",
    "*.egg-info*",
] } }

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yaml", "*.yml"]
"src.cli.templates" = ["**/*"]

